--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -22,20 +22,22 @@
                 <span class="block">calendar</span>
                 <span class="block">for wedding</span>
             </div>
-            <ul class="space-y-4">
-                <li class="flex items-center justify-between px-2 sm:px-3 py-1 rounded-md bg-[#f3f7fc] border-r-4 border-[#b6cee1] text-[#476c8a]">D-31
-                    <span class="w-2 h-2 bg-orange-300 rounded-full"></span>
-                </li>
-                <li class="text-gray-500 text-left ml-4">신랑1 / 신부1</li>
-                <li class="flex items-center justify-between px-2 sm:px-3 py-1 rounded-md bg-[#f3f7fc] border-r-4 border-[#b6cee1] text-[#476c8a]">D-14
-                    <span class="w-2 h-2 bg-yellow-300 rounded-full"></span>
-                </li>
-                <li class="text-gray-500 text-left ml-4">신랑2 / 신부2</li>
-                <li class="flex items-center justify-between px-2 sm:px-3 py-1 rounded-md bg-[#f3f7fc] border-r-4 border-[#b6cee1] text-[#476c8a]">D-2
-                    <span class="w-2 h-2 bg-green-300 rounded-full"></span>
-                </li>
-                <li class="text-gray-500 text-left ml-4">신랑3 / 신부3</li>
-            </ul>
+            <div id="dDayList">
+                <ul class="space-y-4">
+                    <li class="flex items-center justify-between px-2 sm:px-3 py-1 rounded-md bg-[#f3f7fc] border-r-4 border-[#b6cee1] text-[#476c8a]">D-31
+                        <span class="w-2 h-2 bg-orange-300 rounded-full"></span>
+                    </li>
+                    <li class="text-gray-500 text-left ml-4">신랑1 / 신부1</li>
+                    <li class="flex items-center justify-between px-2 sm:px-3 py-1 rounded-md bg-[#f3f7fc] border-r-4 border-[#b6cee1] text-[#476c8a]">D-14
+                        <span class="w-2 h-2 bg-yellow-300 rounded-full"></span>
+                    </li>
+                    <li class="text-gray-500 text-left ml-4">신랑2 / 신부2</li>
+                    <li class="flex items-center justify-between px-2 sm:px-3 py-1 rounded-md bg-[#f3f7fc] border-r-4 border-[#b6cee1] text-[#476c8a]">D-2
+                        <span class="w-2 h-2 bg-green-300 rounded-full"></span>
+                    </li>
+                    <li class="text-gray-500 text-left ml-4">신랑3 / 신부3</li>
+                </ul>
+            </div>
         </div>
     </div>
 
@@ -59,13 +61,16 @@
                 <h1 class="text-base sm:text-lg text-gray-600 font-semibold">일정 관리</h1>
                 <div class="flex items-center justify-end gap-y-1 gap-x-1 sm:gap-x-2 text-[0.6rem] sm:text-xs flex-wrap">
                     <button class="whitespace-nowrap bg-orange-100 rounded-full pl-2 pr-1 h-6 sm:pl-3 sm:pr-2 sm:h-7 text-orange-700 font-medium flex items-center justify-end gap-1">
-                        D-31 <span class="text-[0.65rem] bg-orange-500 ml-0.5 rounded-full w-4 h-4 sm:w-5 sm:h-5 text-white flex items-center justify-center font-light">1</span>
+                        D-31
+                        <span id="D-31" class="text-[0.65rem] bg-orange-500 ml-0.5 rounded-full w-4 h-4 sm:w-5 sm:h-5 text-white flex items-center justify-center font-light">1</span>
                     </button>
                     <button class="whitespace-nowrap bg-yellow-100 rounded-full pl-2 pr-1 h-6 sm:pl-3 sm:pr-2 sm:h-7 text-yellow-700 font-medium flex items-center justify-end gap-1">
-                        D-14 <span class="text-[0.65rem] bg-yellow-500 ml-0.5 rounded-full w-4 h-4 sm:w-5 sm:h-5 text-white flex items-center justify-center font-light">1</span>
+                        D-14
+                        <span id="D-14" class="text-[0.65rem] bg-yellow-500 ml-0.5 rounded-full w-4 h-4 sm:w-5 sm:h-5 text-white flex items-center justify-center font-light">1</span>
                     </button>
                     <button class="whitespace-nowrap bg-green-100 rounded-full pl-2 pr-1 h-6 sm:pl-3 sm:pr-2 sm:h-7 text-green-700 font-medium flex items-center justify-end gap-1">
-                        D-2 <span class="text-[0.65rem] bg-green-500 ml-0.5 rounded-full w-4 h-4 sm:w-5 sm:h-5 text-white flex items-center justify-center font-light">1</span>
+                        D-2
+                        <span id="D-2" class="text-[0.65rem] bg-green-500 ml-0.5 rounded-full w-4 h-4 sm:w-5 sm:h-5 text-white flex items-center justify-center font-light">1</span>
                     </button>
                     <button id="openModal" class="text-[0.65rem] bg-gray-500 ml-0.5 rounded-full w-4 h-4 sm:w-5 sm:h-5 text-white flex items-center justify-center font-light">+</button>
                 </div>
