250205/KYH/엑세스 리프레시 토큰 기반 로그인 구현 1

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -374,6 +374,7 @@
 </dialog>
 
 </body>
+<script th:src="@{/js/auth.js}"></script>
 <script th:src="@{/js/wedding.js}"></script>
 <script>
     // document.addEventListener("DOMContentLoaded", function () {
