--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -60,7 +60,7 @@
             </button>
         </div>
         <div class="text-center mt-4 text-gray-400 underline text-sm">
-            <a href="#">회원가입</a>
+            <a href="/signup">회원가입</a>
         </div>
     </div>
 </form>
